Push gravia process API down to fabric8